ocfl-java-core/src/test/resources/validation/object/object-root-inventory-head-mismatch/v2/inventory.json.sha512
ebcbceab0da055d8bab0862462fb3f712d94e4c3eb40dedd7368f8e3a28d63f5620e2c3bf6936fda2ee4dffb10f6c0df86827727a732fc97b590734382344cd4	inventory.json