ocfl-java-core/src/test/resources/invalid-repos/missing-inventory/o2/v1/inventory.json.sha512
4a083e5a3ee3c777ce20848ec1d2540c3315aa4e8b38ed02fd26b78f691f8cc59a5829e9fe655ec9df465537afb9135dca6fd24c6e30b5cf9b1917903d4e24b3	inventory.json